Fix potential memory leak in harfbuzz shaping.

XMLWordPrintable

    • 2d
    • b25
    • generic

        There are a couple of potential memory leaks in harfbuzz, where
        allocated memory is neither returned nor freed after an error condition:
        https://github.com/harfbuzz/harfbuzz/pull/1115
        One of these should not affect OpenJDK since we don't compile the
        file (hb-ft.c) but the other could. However best to pull in both of them
        since we do have the file, just don't currently build it.

              Assignee:
              Philip Race
              Reporter:
              Philip Race
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: