8208466: Fix potential memory leak in harfbuzz shaping

Reviewed-by: jdv, kaddepalli